# libcouchbase-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  example.cpp
doc/: Doxyfile  README
examples/: cliopts.c  cliopts.h  sample.cpp  threads.cc
include/libcouchbase/: couchbase++.h  lcb++-inldefs.h  lcb++-internal.h  lcb++.h
include/libcouchbase/couchbase++/: batch.inl.h  client.inl.h  endure.h  forward.h  inldefs.h  internal.h  logging.h  mctx.inl.h  operations.inl.h  query.h  query.inl.h  row_common.h  status.h  viewinl.h  views.h  views.inl.h
include/libcouchbase/plusplus/: commands.h  common.h  connection.h  future.h  lcb++.h  mt.h  responses.h
src/: connection.cc  future.cc  lcb++.cpp  mt.cc
tests/: CMakeLists.txt  redef_1.cpp  redef_2.cpp
